# cmake-example

./: CMakeLists.txt  README.md  hello_world.cpp
